--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,11 +25,11 @@
 <!--      <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1> -->
       <h1 class="project-name">Sid Agrawal</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-        <a href="#research-interests" accesskey="1" title="" class="btn">Research Interests</a>
-        <a href="#publications" accesskey="3" title="" class="btn">Publications</a>
-        <a href="#teaching" accesskey="4" title="" class="btn">Teaching</a>
-        <a href="#service" accesskey="5" title="" class="btn">Service</a>
-        <a href="#awards--honors" accesskey="6" title="" class="btn">Awards</a>
+        <a href="#research-interests" accesskey="1" title="" class="btn">Research Interests</a> 
+ <!--         <a href="#publications" accesskey="3" title="" class="btn">Publications</a> -->
+  <!--        <a href="#teaching" accesskey="4" title="" class="btn">Teaching</a> -->
+ <!--         <a href="#service" accesskey="5" title="" class="btn">Service</a> -->
+<!--          <a href="#awards--honors" accesskey="6" title="" class="btn">Awards</a> -->
         <a href="Resume_acad.pdf" accesskey="7" title="" class="btn">CV</a>
         <a href="#contact" accesskey="8" title="" class="btn">Contact</a>
         
