--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
   <!--        <a href="#teaching" accesskey="4" title="" class="btn">Teaching</a> -->
  <!--         <a href="#service" accesskey="5" title="" class="btn">Service</a> -->
 <!--          <a href="#awards--honors" accesskey="6" title="" class="btn">Awards</a> -->
-        <a href="Resume_acad.pdf" accesskey="7" title="" class="btn">CV</a>
+        <a href="Resume_Sidhartha_Agrawal_Acad.pdf" accesskey="7" title="" class="btn">CV</a>
         <a href="#contact" accesskey="8" title="" class="btn">Contact</a>
         
 <!--      {% if site.github.is_project_page %}
