--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 <!--      <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1> -->
       <h1 class="project-name">Sid Agrawal</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-        <a href="#research-interests" accesskey="1" title="" class="btn">Research Interests</a> 
+        <a href="#research-projects" accesskey="1" title="" class="btn">Research</a> 
  <!--         <a href="#publications" accesskey="3" title="" class="btn">Publications</a> -->
   <!--        <a href="#teaching" accesskey="4" title="" class="btn">Teaching</a> -->
  <!--         <a href="#service" accesskey="5" title="" class="btn">Service</a> -->
