--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -5,3 +5,11 @@ layout: default
 <p>{{ page.date | date_to_string }} - {{ page.author }}</p>
 
 {{ content }}
+
+<script src="https://utteranc.es/client.js"
+        repo="sid-agrawal/sid-agrawal.github.io"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
