--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -4,7 +4,12 @@ layout: default
 <h2>{{ page.title }}</h2>
 <p class="meta">{{ page.date | date_to_string }}</p>
 
+
+Some testing tezt
+
+
 {{ content }}
+
 
 <script src="https://utteranc.es/client.js"
         repo="sid-agrawal/sid-agrawal.github.io"
