--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
  <!--         <a href="#service" accesskey="5" title="" class="btn">Service</a> -->
         <a href="blog.html" accesskey="6" title="" class="btn">Blog</a>
         <a href="Resume_Sidhartha_Agrawal_Acad.pdf" accesskey="7" title="" class="btn">CV</a>
-        <a href="#contact" accesskey="8" title="" class="btn">Contact</a>
+        <a href="index.html#contact" accesskey="8" title="" class="btn">Contact</a>
         
 <!--      {% if site.github.is_project_page %}
       <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
