--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -8,7 +8,7 @@ layout: default
 
 <script src="https://utteranc.es/client.js"
         repo="sid-agrawal/sid-agrawal.github.io"
-        issue-term="title"
+        issue-term="pathname"
         theme="github-light"
         crossorigin="anonymous"
         async>
