Clean up buttons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,28 +22,13 @@
   <body>
     
     <header class="page-header" role="banner">
-<!--      <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1> -->
       <h1 class="project-name">Sid Agrawal</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-        <a href="index.html#research-projects" accesskey="1" title="" class="btn">Research</a> 
- <!--         <a href="#publications" accesskey="3" title="" class="btn">Publications</a> -->
-  <!--        <a href="#teaching" accesskey="4" title="" class="btn">Teaching</a> -->
- <!--         <a href="#service" accesskey="5" title="" class="btn">Service</a> -->
-        <a href="blog.html" accesskey="6" title="" class="btn">Blog</a>
-        <a href="Resume_Sidhartha_Agrawal_Acad.pdf" accesskey="7" title="" class="btn">CV</a>
-        <a href="index.html#contact" accesskey="8" title="" class="btn">Contact</a>
-        
-<!--      {% if site.github.is_project_page %}
-      <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
--->      
-<!--      {% endif %}
-      {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
-      {% endif %}
-    <br><br>
-    <img src="profile_pic-square.jpg" class="wrap align-center" height="150px" width="110px" border-radius=50%>
--->
+        <a href="sid-agrawal.ca/index.html#research-projects" accesskey="1" title="" class="btn">Research</a> 
+        <a href="sid-agrawal.ca/blog.html" accesskey="2" title="" class="btn">Blog</a>
+        <a href="sid-agrawal.ca/Resume_Sidhartha_Agrawal_Acad.pdf" accesskey="3" title="" class="btn">CV</a>
+        <a href="https://www.linkedin.com/in/sidhartha-agrawal" accesskey="4" title="" class="btn">LinkedIn</a>
+        <a href="sid-agrawal.ca/index.html#contact" accesskey="5" title="" class="btn">Contact</a>
     </header>
 
     <main id="content" class="main-content" role="main">
