Clean up buttons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         <a href="sid-agrawal.ca/blog.html" accesskey="2" title="" class="btn">Blog</a>
         <a href="sid-agrawal.ca/Resume_Sidhartha_Agrawal_Acad.pdf" accesskey="3" title="" class="btn">CV</a>
         <a href="https://www.linkedin.com/in/sidhartha-agrawal" accesskey="4" title="" class="btn">LinkedIn</a>
-        <a href="sid-agrawal.ca/index.html#contact" accesskey="5" title="" class="btn">Contact</a>
+        <a href="/index.html#contact" accesskey="5" title="" class="btn">Contact</a>
     </header>
 
     <main id="content" class="main-content" role="main">
