Clean up buttons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,9 +24,9 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">Sid Agrawal</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-        <a href="sid-agrawal.ca/index.html#research-projects" accesskey="1" title="" class="btn">Research</a> 
-        <a href="sid-agrawal.ca/blog.html" accesskey="2" title="" class="btn">Blog</a>
-        <a href="sid-agrawal.ca/Resume_Sidhartha_Agrawal_Acad.pdf" accesskey="3" title="" class="btn">CV</a>
+        <a href="/index.html#research-projects" accesskey="1" title="" class="btn">Research</a> 
+        <a href="/blog.html" accesskey="2" title="" class="btn">Blog</a>
+        <a href="/Resume_Sidhartha_Agrawal_Acad.pdf" accesskey="3" title="" class="btn">CV</a>
         <a href="https://www.linkedin.com/in/sidhartha-agrawal" accesskey="4" title="" class="btn">LinkedIn</a>
         <a href="/index.html#contact" accesskey="5" title="" class="btn">Contact</a>
     </header>
