--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
   <body>
     
     <header class="page-header" role="banner">
-      <h1 class="project-name">Sid Agrawal</h1>
+      <h1 href="/index.html" class="project-name">Sid Agrawal</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
         <a href="/index.html#research-projects" accesskey="1" title="" class="btn">Research</a> 
         <a href="/blog.html" accesskey="2" title="" class="btn">Blog</a>
