--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,9 @@
   <body>
     
     <header class="page-header" role="banner">
-      <h1 href="/index.html" class="project-name">Sid Agrawal</h1>
+      <h1 class="project-name">Sid Agrawal</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+        <a href="/" accesskey="0" title="" class="btn">Home</a>
         <a href="/index.html#research-projects" accesskey="1" title="" class="btn">Research</a> 
         <a href="/blog.html" accesskey="2" title="" class="btn">Blog</a>
         <a href="/Resume_Sidhartha_Agrawal_Acad.pdf" accesskey="3" title="" class="btn">CV</a>
