--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,8 @@
         <a href="/blog.html" accesskey="2" title="" class="btn">Blog</a>
         <a href="/Resume_Sidhartha_Agrawal_Acad.pdf" accesskey="3" title="" class="btn">CV</a>
         <a href="https://www.linkedin.com/in/sidhartha-agrawal" accesskey="4" title="" class="btn">LinkedIn</a>
-        <a href="/index.html#contact" accesskey="5" title="" class="btn">Contact</a>
+        <a href="https://scholar.google.com.sg/citations?user=lbtDk5UAAAAJ&inst=17001591832933267808" accesskey="5" title="" class="btn">Google Scholar</a>
+        <a href="/index.html#contact" accesskey="6" title="" class="btn">Contact</a>
     </header>
 
     <main id="content" class="main-content" role="main">
